# nexus-ecosystem

./: .env.example  .gitignore  .run_slither.ps1  AUTH_ROOT_CAUSE_REPORT.md  CHANGELOG.md  DEPRECATION_AUDIT.md  ENGINEERING_RULE.md  FINAL_AUTOMATED_AUDIT.md  FINAL_PRODUCTION_AUDIT.md  FINAL_SESSION_REPORT.md  PROJECT_STATUS.md  README.md  RELEASE.md  debug_passport_mint.py  package-lock.json  package.json  playwright.config.ts  playwright.demo.config.ts  render.yaml  start-nexus.bat  start-nexus.ps1  status.txt  stop-nexus.bat  test_ci_setup.py
apps/api/: .dockerignore  Dockerfile  RAILWAY_DEPLOY.md  RENDER_ENV_CHECKLIST.md  pyproject.toml  railway.json  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_users_wallets_sessions.py  002_create_projects.py  003_create_skill_passports_nft_records.py  004_create_audits.py  005_create_analytics_events.py  006_create_founder_agent_tables.py  007_create_knowledge_documents.py  008_add_ai_settings_memory.py  009_founder_conversations_pin_archive.py  010_fix_schema_drifts.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  ownership.py  pagination.py
apps/api/app/core/: config.py  database.py  (+4 more)
apps/api/docs/: stitch_api_contract.md
apps/api/scripts/: seed_demo.py  verify_phase2.py
apps/api/tests/: conftest.py  test_ai.py  test_analytics.py  test_auditor.py  test_audits.py  test_auth.py  test_auth_service.py  test_config.py  test_context_builder.py  test_founder_agent.py  test_health.py  test_memory.py  test_migrations.py  test_passport_service.py  test_passports.py  test_projects.py
(+238 files in other folders)
