[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-api"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]
"app/modules/dev_infra/router.py" = ["E501"]
"app/services/auditor/gas_service.py" = ["E501"]
"app/services/auditor/prompts.py" = ["E501"]
"app/services/auditor/export_service.py" = ["E501"]
"app/modules/auditor/router.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "-p pytest_asyncio"

